统一异常处理

--- a/rose/roses-gateway/roses-gateway-local.yml
+++ b/rose/roses-gateway/roses-gateway-local.yml
@@ -35,6 +35,13 @@ zuul:
   retryable: false         #转发重试关闭
 
 feign:
+  httpclient:
+    # feign 最大连接数
+    max-connections: 200
+    # feign 单个路径请求的最大连接数
+    max-connections-per-route: 50
+  okhttp:
+    enabled: true
   hystrix:
     enabled: true
 
